--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.body_backgorund 
+.body_background 
 {
     background-image: url("https://i.ytimg.com/vi/Dg0IjOzopYU/maxresdefault.jpg");
     background-position: center;
